--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
-scikit-learn
-pandas
-numpy
-joblib
-matplotlib
-seaborn
-xgboost
-tqdm
-jupyter
-
+version https://git-lfs.github.com/spec/v1
+oid sha256:871685f941b24679d32b7c57091107d3f1df64a2be2b0c760e4fab233bad14bf
+size 74
