--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 *.pkl filter=lfs diff=lfs merge=lfs -text
+nba_fifth_player_model.pkl filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
