--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,8 @@
-*.pkl filter=lfs diff=lfs merge=lfs -text
-nba_fifth_player_model.pkl filter=lfs diff=lfs merge=lfs -text
+src/nba_fifth_player_model.pkl filter=lfs diff=lfs merge=lfs -text
+src/nba_label_encoders.pkl filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
 *.txt filter=lfs diff=lfs merge=lfs -text
 *.py filter=lfs diff=lfs merge=lfs -text
+*.pkl filter=lfs diff=lfs merge=lfs -text
