--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+src/nba_fifth_player_model.pkl filter=lfs diff=lfs merge=lfs -text
 *.gitignore filter=lfs diff=lfs merge=lfs -text
 *.md filter=lfs diff=lfs merge=lfs -text
 *.csv filter=lfs diff=lfs merge=lfs -text
